# Real-Time-Voice-Assistant

./: .gitignore  README.md  build.gradle.kts  contributing.md  gradle.properties  llm-config.gradle.kts  settings.gradle.kts
app/: build.gradle.kts  download.gradle  proguard-rules.pro  pushModels.py  pushModels.sh
app/src/androidTest/java/com/arm/voiceassistant/audio/: AudioReaderTest.kt  AudioRecorderTest.kt  SpeechRecorderTest.kt
app/src/androidTest/java/com/arm/voiceassistant/mocks/: NoOpSpeechRecorder.kt
app/src/androidTest/java/com/arm/voiceassistant/speech/: SpeechSynthesisTest.kt
app/src/androidTest/java/com/arm/voiceassistant/subscribers/: ResponseSubscriberTest.kt
app/src/androidTest/java/com/arm/voiceassistant/ui/: BenchmarkScreenUITest.kt  MainScreenUITest.kt  ModeSelectionScreenUITest.kt  NavigationTest.kt  UiStateTest.kt
app/src/androidTest/java/com/arm/voiceassistant/utils/: UtilsTest.kt
app/src/androidTest/java/com/arm/voiceassistant/viewmodels/: ErrorMessageTest.kt  MainViewModelTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/arm/voiceassistant/: MainActivity.kt  Pipeline.kt  PipelineTimers.kt  ScreenScaffold.kt
app/src/main/java/com/arm/voiceassistant/audio/: AudioReader.kt  AudioRecorder.kt
app/src/main/java/com/arm/voiceassistant/data/benchmark/: BenchmarkHistoryRepository.kt  BenchmarkReportModels.kt
app/src/main/java/com/arm/voiceassistant/speech/: AndroidTextToSpeechWrapper.kt  SpeechRecorder.kt  SpeechSynthesis.kt
app/src/main/java/com/arm/voiceassistant/subscribers/: ResponseSubscriber.kt
app/src/main/java/com/arm/voiceassistant/ui/composables/: ActionButton.kt  BenchmarkHistoryComponents.kt  BenchmarkResultComponents.kt  BottomNavBar.kt  ChatMessageComponents.kt  ConfirmationDialog.kt  ConversationText.kt  DropdownMenu.kt  ErrorSnackbar.kt  MonitorMetricsText.kt  PerformanceMetrics.kt  TopBar.kt  TopToast.kt
app/src/main/java/com/arm/voiceassistant/ui/navigation/: NavGraph.kt  Routes.kt
app/src/main/java/com/arm/voiceassistant/ui/screens/: BenchmarkScreen.kt  MainScreen.kt  ModeSelectionScreen.kt
app/src/main/java/com/arm/voiceassistant/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/arm/voiceassistant/utils/: ChatMessage.kt  ChatMetricsUpdater.kt  Common.kt  Constants.kt  SystemStatusMonitor.kt  Timer.kt
app/src/main/java/com/arm/voiceassistant/viewmodels/: MainScreenViewModel.kt  ViewModelProvider.kt
app/src/model_configuration_files/: llamaConfigUser.json  onnxConfigUser.json  whisperConfigUser.json
docs/: README.md  benchmarking.md  build_and_configure.md  contributing.md  system_overview.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
llm/: CMakeLists.txt  build.gradle.kts
stt/: CMakeLists.txt  build.gradle.kts
